# wasvm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make_tests.py  maketests.py  run_tests.py  spectest.wat
.github/workflows/: actions.yml
src/: Compiler.cpp  Compiler.h  FileStream.h  JIT.cpp  JIT.h  MemoryStream.h  Module.cpp  Module.h  Opcode.h  Operators.h  Parser.cpp  Parser.h  Proposals.h  SIMD.h  Stack.h  Stream.h  StringMap.h  TestRunner.cpp  TestRunner.h  Trap.h  Type.cpp  Type.h  Util.cpp  Util.h  VM.cpp  VM.h  Validator.cpp  Validator.h  Value.cpp  Value.h  ValueStack.h  WASI.cpp  WASI.h  WasmFile.cpp  WasmFile.h  main.cpp
src/Stream/: FileStream.h  MemoryStream.h  Stream.h
src/Tests/: SpecTestModule.cpp  SpecTestModule.h  TestRunner.cpp  TestRunner.h
src/Util/: SIMD.h  Stack.h  StringMap.h  Util.cpp  Util.h
src/VM/: Label.h  Module.cpp  Module.h  Operators.h  Trap.h  Type.cpp  Type.h  VM.cpp  VM.h  Value.cpp  Value.h  ValueStack.h
src/WasmFile/: Opcode.h  Parser.cpp  Parser.h  Validator.cpp  Validator.h  WasmFile.cpp  WasmFile.h
src/argparse/: argparse.hpp
src/simdutf/: simdutf.cpp
